Kubernetes/cwiczenia/Podstawy-2/rozwiazania/daemonset-3.2-node-monitor.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-monitor
  namespace: cwiczenia
spec:
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      nodeSelector:
        monitoring: enabled
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
