Kubernetes/cwiczenia/Podstawy-2/rozwiazania/daemonset-3.3-system-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: system-daemon
  namespace: cwiczenia
spec:
  selector:
    matchLabels:
      app: system
  template:
    metadata:
      labels:
        app: system
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
