Kubernetes/cwiczenia/Podstawy-2/rozwiazania/ingress-1.2-app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: cwiczenia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
