Kubernetes/cwiczenia/Podstawy-2/rozwiazania/ingress-1.2-app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: cwiczenia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
