Kubernetes/cwiczenia/Podstawy-2/rozwiazania/ingress-1.3-secure-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-app
  namespace: cwiczenia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure
  template:
    metadata:
      labels:
        app: secure
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
