Kubernetes/cwiczenia/Podstawy-2/rozwiazania/statefulset-2.1-web-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web-sts
  namespace: cwiczenia
spec:
  serviceName: web-sts
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
