Kubernetes/cwiczenia/Podstawy-2/rozwiazania/statefulset-2.2-db-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: cwiczenia
spec:
  serviceName: db-sts
  replicas: 2
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
