Kubernetes/cwiczenia/Podstawy-2/rozwiazania/statefulset-2.3-app-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-sts
  namespace: cwiczenia
spec:
  serviceName: app-sts
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
