Kubernetes/cwiczenia/Podstawy-2/rozwiazania/storage-6.1-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  namespace: cwiczenia
spec:
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: app-data-pvc
