Kubernetes/cwiczenia/Podstawy-2/rozwiazania/ingress-1.1-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: cwiczenia
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
