Kubernetes/cwiczenia/Podstawy-2/rozwiazania/ingress-1.2-app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: cwiczenia
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
