Kubernetes/cwiczenia/Podstawy-2/rozwiazania/ingress-1.2-app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: cwiczenia
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
