Kubernetes/cwiczenia/Podstawy-2/rozwiazania/ingress-1.3-secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-svc
  namespace: cwiczenia
spec:
  type: ClusterIP
  selector:
    app: secure
  ports:
  - port: 80
    targetPort: 80
