Kubernetes/cwiczenia/Podstawy-2/rozwiazania/statefulset-2.1-web-sts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-sts
  namespace: cwiczenia
spec:
  clusterIP: None
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
