Kubernetes/cwiczenia/Podstawy-2/rozwiazania/statefulset-2.2-db-sts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-sts
  namespace: cwiczenia
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - port: 80
    targetPort: 80
