Kubernetes/cwiczenia/Podstawy-2/rozwiazania/statefulset-2.3-app-sts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-sts
  namespace: cwiczenia
spec:
  clusterIP: None
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
